# AGI_CELL

./: .gitignore  Dockerfile  LICENSE  NOTICE  README.md  agi_demo.py  demo_run.py  pyproject.toml
00_ARCHIVE_ANALYSIS/: DONOR_COMPONENT_MAP.md
01_ARCHITECTURE/: DATABASE_INTRODUCTION_PLAN.md  DATA_CONSISTENCY_STRATEGY.md  FAILURE_RECOVERY_MODEL.md  IMPLEMENTATION_CHECKLIST.md  MEMORY_OWNERSHIP_MATRIX.md
config/: adapters.yaml
docs/provenance/: NOTES.md
examples/: okf_context_experiment.py  wrap_external_policy.py
okf/: index.md
okf/goals/: observe_entity.md
okf/safety/: envelope.md
okf/skills/: approach_target.md  avoid_obstacle.md  emergency_stop.md  hold_position.md  investigate_anomaly.md  patrol.md  yield_to_human.md
reports/: ABLATION_REPORT.md  bench_1m_output.txt
scripts/: generate_okf_bundle.py
src/machine_brain/: __init__.py
src/machine_brain/acoustic/: resonance.py
src/machine_brain/artifacts/: store.py
src/machine_brain/associative/: index.py
src/machine_brain/attention/: selector.py
src/machine_brain/audit/: ledger.py
tests/ablations/: test_ablations.py
tests/adversarial/: test_adversarial.py  test_fuzz_guard.py
tests/benchmarks/: bench_throughput.py  test_benchmark_smoke.py
tests/unit/: test_cognitive_brain_llm_goal.py  test_core_stores.py  test_guard_pipeline.py  test_llm_goal_interpreter.py  test_llm_goal_interpreter_real_model.py  test_mujoco_world.py  test_no_double_counted_outcomes.py  test_okf_loader.py  test_panini_phonology.py  test_real_physics_dynamics.py  test_safety_invariants.py  test_world_model_agent.py
(+32 files in other folders)
