[project]
name = "machine_brain"
version = "0.1.0"
description = "Bounded cognitive runtime — RAM + SQLite + MCAP floor, optional adapters above"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
qdrant = ["qdrant-client"]
neo4j = ["neo4j"]
postgres = ["psycopg[binary]"]
clickhouse = ["clickhouse-connect"]
mcap = ["mcap"]
physics = ["mujoco"]
llm = ["llama-cpp-python", "pyyaml"]
okf = ["pyyaml"]
dev = ["pytest>=8.0", "hypothesis>=6.0", "mypy>=1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
